--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4343A1"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:id="@+id/RelativeLayout">
 
     <Button
         android:layout_width="wrap_content"
